# nats-exp

./: Cargo.toml  README.md
nats-actor/: Cargo.toml  docker-compose.yml
nats-actor/src/: event.rs  lib.rs  publisher.rs  subscriber.rs
nats-actor2/: Cargo.toml
nats-actor2/src/: event_stream_handler.rs  lib.rs  publisher.rs  subscriber.rs
nats-actor2/src/model/event/: event.rs  mod.rs
nats-actor2/src/model/event/nats/: ping.rs  pong.rs
service-a/: Cargo.toml
service-a/src/: main.rs
service-b/: Cargo.toml
service-b/src/: main.rs
tracer/: Cargo.toml
tracer/src/: main.rs  telemetry.rs
