[package]
name = "nats-actor2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "publisher"         # The name of the target.
path = "bin/publisher.rs"  # The source file of the target.

[[bin]]
name = "subscriber1"         # The name of the target.
path = "bin/subscriber1.rs"  # The source file of the target.

[[bin]]
name = "subscriber2"         # The name of the target.
path = "bin/subscriber2.rs"  # The source file of the target.

[[bin]]
name = "subscriber3"         # The name of the target.
path = "bin/subscriber3.rs"  # The source file of the target.

[[bin]]
name = "subscriber4"         # The name of the target.
path = "bin/subscriber4.rs"  # The source file of the target.

[[bin]]
name = "subscriber5"         # The name of the target.
path = "bin/subscriber5.rs"  # The source file of the target.

[dependencies]
actix = "0.13.0"
async-channel = "1.6"
async-trait = "0.1"
futures-util = { version = "0.3", default-features = false, features=["std"]}
log = "0.4"
serde = { version = "1.0", features = ['derive'] }
serde_json = "1.0"
thiserror = "1.0"
# tokio = { version = "1", features = ["net", "time"] }
tokio-stream = { version = "0.1", features = ["net"] }
tokio-util = { version = "0.7.0", features = ["codec"] }
tracing = "0.1"
tracing-futures = "0.2"
derive_more = "0.99.14"
async-nats = { version = "0.10" }
backoff = { version = "0.4.0", default-features = false, features = ["tokio"] }
uuid = { version = "0.8", default-features = false, features = ["serde", "v4"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
mime = "0.3"

# for events
cloudevents-sdk = "0.5"

# for binaries
actix-web = "4.0.0-beta.14"
actix-rt = "2.5.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
actix-rt = "2.2"
once_cell = "1.8"
port_check = "0.1"
rand = "0.8"
reqwest = { version = "0.11", default-features = false, features = ["json", "rustls-tls-native-roots"] }
serial_test = "*"
testcontainers = "0.12"
